--- a/WInUiBrower/Controller/ConfigInfo.xaml
+++ b/WInUiBrower/Controller/ConfigInfo.xaml
@@ -14,11 +14,12 @@
     <ScrollViewer>
         <StackPanel Spacing="12" Margin="12">
             <!-- 基础配置 -->
-            <Expander IsExpanded="True" HorizontalAlignment="Stretch" HorizontalContentAlignment="Left">
+            <Expander IsExpanded="False" HorizontalAlignment="Stretch" HorizontalContentAlignment="Left">
                 <Expander.Header>
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="{Binding Key}" VerticalAlignment="Center"/>
@@ -28,6 +29,14 @@
                                       Margin="0,0,12,0"
                                       IsOn="{Binding IsEnable,Mode=TwoWay}"
                                       />
+                        <Button Grid.Column="2" 
+                            Content="&#xE106;" 
+                            FontFamily="Segoe MDL2 Assets"
+                            Click="DeleteServerItem_Click"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Margin="0,0,0,0"
+                            ToolTipService.ToolTip="删除"/>
                     </Grid>
                 </Expander.Header>
                 
