--- a/WInUiBrower/Controller/ConfigInfo.xaml
+++ b/WInUiBrower/Controller/ConfigInfo.xaml
@@ -43,6 +43,21 @@
                 <Expander.Content>
                     
                         <StackPanel Spacing="12">
+                            
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="120"/>
+                                <ColumnDefinition Width="500"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="工作目录:" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                            <TextBox Grid.Column="1" Text="{Binding WorkingDirectory,Mode=TwoWay}" 
+                                     PlaceholderText="请设置工作目录"
+                                     HorizontalAlignment="Stretch" 
+                                     IsReadOnly="True"
+                                     />
+                            <Button Grid.Column="2" Content="..." Click="WorkingDirectoryButton_Click" Margin="10,0,0,0"/>
+                        </Grid>
 
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -50,13 +65,13 @@
                                 <ColumnDefinition Width="500"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Text="启动程序:" VerticalAlignment="Stretch" HorizontalAlignment="Left"/>
-                            <TextBox Grid.Column="1" Text="{Binding WorkingDirectory,Mode=TwoWay}" 
-                                     PlaceholderText="请输入工作目录"
+                            <TextBlock Grid.Column="0" Text="启动程序:" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                            <TextBox Grid.Column="1" Text="{Binding ExecutableFile,Mode=TwoWay}" 
+                                     PlaceholderText="请设置执行文件"
                                      HorizontalAlignment="Stretch" 
                                      IsReadOnly="True"
                                      />
-                            <Button Grid.Column="2" Content="..." Click="WorkingDirectoryButton_Click" Margin="10,0,0,0"/>
+                            <Button Grid.Column="2" Content="..." Click="FileButton_Click" Margin="10,0,0,0"/>
                         </Grid>
 
                         <Grid>
