--- a/WInUiBrower/Views/StatusMonitorPage.xaml
+++ b/WInUiBrower/Views/StatusMonitorPage.xaml
@@ -4,12 +4,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WInUiBrower.Views"
+    xmlns:model="using:WInUiBrower.Model"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=model:DynamicContants}"
+    >
 
     <Grid>
-        <ListView x:Name="ServicesListView" Margin="10">
+        <ListView x:Name="ServicesListView" Margin="10" ItemsSource="{Binding Items}">
             <ListView.Header>
                 <Grid Padding="10" Background="{ThemeResource SystemBaseLowColor }">
                     <Grid.ColumnDefinitions>
@@ -20,7 +23,7 @@
                         <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="2*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Text="服务名" FontWeight="Bold" />
+                    <TextBlock Grid.Column="0" Text="服务名" FontWeight="Bold"/>
                     <TextBlock Grid.Column="1" Text="PID" FontWeight="Bold" />
                     <TextBlock Grid.Column="2" Text="端口" FontWeight="Bold" />
                     <TextBlock Grid.Column="3" Text="状态" FontWeight="Bold" />
@@ -33,16 +36,16 @@
                 <DataTemplate>
                     <Grid Padding="10">
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
                             <ColumnDefinition Width="2*" />
-                            <ColumnDefinition Width="1*" />
-                            <ColumnDefinition Width="1*" />
-                            <ColumnDefinition Width="1*" />
-                            <ColumnDefinition Width="2*" />
-                            <ColumnDefinition Width="1*" />
                         </Grid.ColumnDefinitions>
 
                         <!-- 服务名 -->
-                        <TextBlock Grid.Column="0" Text="{Binding ServiceName}" VerticalAlignment="Center" />
+                        <TextBlock Grid.Column="0" Text="{Binding Key}" VerticalAlignment="Center" />
 
                         <!-- PID -->
                         <TextBlock Grid.Column="1" Text="{Binding PID}" VerticalAlignment="Center" />
