--- a/WInUiBrower/Views/ServerConfig.xaml
+++ b/WInUiBrower/Views/ServerConfig.xaml
@@ -8,7 +8,8 @@
     xmlns:model="using:WInUiBrower.Model"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=model:SystemInfo}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -21,7 +22,7 @@
         </CommandBar>
         <!-- 动态生成的控件列表 -->
         <ListView Grid.Row="1" 
-          ItemsSource="{x:Bind model:DynamicContants.Instance.Items,Mode=TwoWay}" 
+          ItemsSource="{Binding Items,Mode=TwoWay}" 
           AllowDrop="True"
           CanReorderItems="True"
           CanDragItems="True">
